--- a/ragge.xyz/_includes/footer.html
+++ b/ragge.xyz/_includes/footer.html
@@ -1,3 +1,6 @@
 <footer>
     <a href="{{ site.repository_link }}" target="_blank">{{ site.repository_link }}</a>
+    <noscript>
+        <span>Some parts of this website require JavaScript to function correctly.</span>
+    </noscript>
 </footer>
