--- a/ragge.xyz/_layouts/not_found.html
+++ b/ragge.xyz/_layouts/not_found.html
@@ -23,7 +23,7 @@
             <span>If this is a new installation, ask your hardware or software manufacturer for any updates you may need.</span>
             <br>
             <br>
-            <span>If problems continue, disable or remove any newly installed extensions. Disable memory options such as caching or cookies and hit CTRL+F5. If this is a legitimate problem, open an issue on the repository :)</span>
+            <span>If problems continue, disable or remove any newly installed extensions. Disable memory options such as caching or cookies and hit &lt;CTRL&gt;+F5.</span>
             <br>
             <br>
             <span>Technical Information:</span>
