--- a/ragge.xyz/_includes/header.html
+++ b/ragge.xyz/_includes/header.html
@@ -1,3 +1,3 @@
 <header>
-    <span>Website Navigation Utility - Copyright (C) 2022 raggebatman</span>
+    <span>Copyright (C) 2022 {{ site.author }}</span>
 </header>
