--- a/library.ragge.xyz/content/index.erb
+++ b/library.ragge.xyz/content/index.erb
@@ -4,10 +4,17 @@
     However, the pacing shouldn't be too off if you decide to read out of order.
 </p>
 <p>
-    See the source code <a href="https://github.com/raggebatman/website/tree/main/library.ragge.xyz">here</a>.
+    There are also articles and notes.
+    Articles are self-serving texts, not contingent on other parts of a whole.
+    Notes are texts that may accomodate for parts of an article or a page in one of the books.
+    Notes will be linked in text when relevant.
+</p>
+<p>
+    Click on a section below to expand it.
 </p>
 
-<% shelf = Shelf.new(@items.find_all('/**/*.md')).books.each { |book| %>
+<h3>Books</h3>
+<% shelf = Shelf.new(@items.find_all('/**/books/**/*.md')).books.each { |book| %>
 <details>
     <summary><%= book.title %></summary>
     <ol>
@@ -20,8 +27,34 @@
 </details>
 <% } %>
 
+<h3>Articles</h3>
+<ul>
+    <% drawer = Drawer.new(@items.find_all('/**/articles/**/*.md')).articles.each { |article| %>
+    <li>
+        <a href="<%= article.hyperlink %>"><%= article.title %></a>
+    </li>
+    <% } %>
+</ul>
+
+<h3>Notes</h3>
+<ul>
+    <% bulletinboard = BulletinBoard.new(@items.find_all('/**/notes/**/*.md')).notes.each { |note| %>
+    <li>
+        <a href="<%= note.hyperlink %>"><%= note.title %></a>
+    </li>
+    <% } %>
+</ul>
+
 <hr>
 
+<h3>Licensing</h3>
+<p>
+    The source code is available under the MIT license <a href="https://github.com/raggebatman/website/tree/main/library.ragge.xyz">here</a>.
+    <br>
+    Written works are distributed under the CC BY-SA 4.0 license where applicable.
+</p>
+
+<h3>Open Source Notice</h3>
 <p>
     This website makes use of the following open source projects:
 </p>
