--- a/www/style.css
+++ b/www/style.css
@@ -1,121 +1,84 @@
-:root {
-    --doc-width: 60ch;
-    --margin: 1rem;
-    --line-width: 1px;
-}
+@import url("assets/normalize.css");
+@import url("assets/fonts/import.css");
+@import url("assets/base.css");
 
 body {
-	margin: 0;
-	font-family: monospace;
-	image-rendering: pixelated;
-	font-size: 1.2em;
-}
-
-header, main, footer {
-	max-width: 60ch;
-	margin: var(--margin) auto;
-}
-
-main p {
-	text-indent: 2ch;
-}
-
-footer {
-	margin-bottom: 30vh;
-}
-
-ol, ul {
-	padding-left: 4ch;
-}
-
-ul li::marker {
-	content: '* ';
-}
-
-a:hover {
-	text-decoration: none;
-}
-
-hr {
-	border-top: var(--line-width) solid;
-}
-
-fieldset {
-	margin: var(--margin) 0;
-	border: var(--line-width) solid;
-}
-
-fieldset legend {
-	padding: 0 1ch;
-}
-
-img {
-	max-height: 300px;
-	width: auto;
-}
-
-figcaption {
-	text-align: center;
-}
-
-table {
-	width: 100%;
-}
-
-.buttons {
-	display: flex;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: 20ch minmax(0, 60ch) 20ch;
+	grid-template-rows: auto;
+	grid-template-areas: 
+		". header ."
+		"buttons main aside"
+		". footer .";
 	justify-content: center;
 	gap: 1ch;
 }
 
-.buttons a, a.button {
-	text-decoration: none;
-	display: inline-block;
-	vertical-align: bottom;
+header {
+	grid-area: header;
 }
 
-.buttons img, a.button img, img.button {
-	vertical-align: middle;
+main {
+	grid-area: main;
+	margin-left: 2rem;
+	margin-right: 2rem;
 }
 
-.center {
-	text-align: center;
+aside {
+	grid-area: aside;
 }
 
-legend.center {
-	text-align: initial;
-	margin: auto;
+#buttons {
+	grid-area: buttons;
+	image-rendering: pixelated;
 }
 
-.roundel {
+#buttons > div {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-evenly;
+	align-items: baseline;
+	gap: 1ch;
 }
 
-.roundel div {
-	text-align: center;
+#buttons img {
+	transition: transform 100ms ease-out;
 }
 
-.roundel div:first-child {
-	flex: 1;
-	text-align: left;
+#buttons a:hover img {
+	transform: scale(120%);
+	transition: transform 50ms ease-in;
 }
 
-.roundel div:last-child {
-	flex: 1;
-	text-align: right;
+footer {
+	grid-area: footer;
+	margin-bottom: 30%;
 }
 
-@media only screen and (max-width: 300px) {
-	fieldset {
-		border: none;
-		padding-left: 0;
-		padding-right: 0;
+@media only screen and (max-width: 120ch) {
+	body {
+		grid-template-areas:
+			"header ."
+			"main aside"
+			"buttons ."
+			"footer .";
+		grid-template-columns: minmax(0, 60ch) 20ch;
 	}
 
-	main p {
-		text-indent: 0;
+	main {
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
+
+@media only screen and (max-width: 70ch) {
+	body {
+		grid-template-areas:
+			"header"
+			"main"
+			"aside"
+			"buttons"
+			"footer";
+		grid-template-columns: auto;
 	}
 }
