--- a/www/feed/style.css
+++ b/www/feed/style.css
@@ -20,3 +20,23 @@ header::after {
 header h1 {
     margin-bottom: 0;
 }
+
+main img {
+    width: 40ch;
+    max-width: 90%;
+}
+
+figure {
+    margin: 1ch 0;
+    text-align: center;
+}
+
+footer {
+    margin-top: 1rem;
+    font-size: 80%;
+}
+
+footer p {
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+}
